--- a/documentation/Other/JdcloudApp/TOC.yml
+++ b/documentation/Other/JdcloudApp/TOC.yml
@@ -8,16 +8,26 @@ items:
   - name: 登录注册
     items: 
     - name: 扫码登录
-      href: Personal/Face.md
+      href: login/ScancodeLogin.md
     - name: 本机一键登录
-      href: Personal/Face.md
-    - name: 资源运维
-      href: Personal/Face.md
-- name: 资源运维
-  items: 
-  - name: 资源管理
-    href: Business/Remit.md
-  - name: 监控报警
-    href: Business/Legal.md
+      href: login/PhoneLogin.md
+  - name: 资源运维
+    items: 
+    - name: 资源管理
+      href: resource/Manage.md
+    - name: 监控报警
+      href: resource/Monitor.md
+  - name: 财务服务
+    items: 
+    - name: 充值
+      href: finance/Charge.md
+    - name: 续费
+      href: finance/Renew.md
+    - name: 订单
+      href: finance/order.md
+  - name: 服务中心
+    items: 
+    - name: 提交工单
+      href: service/SubmitWorkOrder.md
 - name: 常见问题
   href: FAQs.md
