--- a/documentation/Other/JdcloudApp/TOC.yml
+++ b/documentation/Other/JdcloudApp/TOC.yml
@@ -21,7 +21,7 @@ items:
       href: finance/Charge.md
     - name: 续费
       href: finance/Renew.md
-    - name: 订单
+    - name: 支付
       href: finance/Order.md
   - name: 服务中心
     items: 
