--- a/documentation/Domain-Name-&-License/ICP-License-Service/TOC.yml
+++ b/documentation/Domain-Name-&-License/ICP-License-Service/TOC.yml
@@ -29,6 +29,8 @@ items:
             href: Getting-Started/Process/Website-Cancellation.md
           - name: 取消接入
             href: Getting-Started/Process/Cancel-Access.md    
+          - name: 演示
+            href: Getting-Started/Process/yan-shi.md    
       - name: 管局规则
         items:
           - name: 安徽
