--- a/documentation/Domain-Name-&-License/ICP-License-Service/TOC.yml
+++ b/documentation/Domain-Name-&-License/ICP-License-Service/TOC.yml
@@ -28,9 +28,14 @@ items:
           - name: 网站注销
             href: Getting-Started/Process/Website-Cancellation.md
           - name: 取消接入
-            href: Getting-Started/Process/Cancel-Access.md    
+            href: Getting-Started/Process/Cancel-Access.md  
+          - name: 取消接入
+            href: Getting-Started/Process/Cancel-Access.md   
       - name: 管局规则
         items:
+      - name: 取消接入
+        items:
+           
           - name: 安徽
             href: Getting-Started/Management-specification/Anhui.md
           - name: 北京
