--- a/documentation/Middleware/JD-Distributed-Transaction-Service/TOC.yml
+++ b/documentation/Middleware/JD-Distributed-Transaction-Service/TOC.yml
@@ -1,4 +1,4 @@
-name: 云服务网格
+name: 分布式事务
 href:
 items:
 - name: 产品简介
@@ -11,24 +11,15 @@ items:
       herf: Introduction/Features.md    
     - name: 应用场景 
       herf: Introduction/Application-Scenarios.md   
-    - name: 限制说明 
-      herf: Introduction/Restrictions.md
+    - name: 核心概念 
+      herf: Introduction/Core-Concepts.md
 - name: 产品定价
   items:
     - name: 计费概述
       herf: Pricing/Billing-Overview.md
-- name: 入门指南
-  items:    
-    - name: 入门示例
-      herf: Getting-Started/Basic-Example.md
 - name: 操作指南
   items:
-    - name: Istio管理
-      herf: Operation-Guide/Istio-Manage.md
-    - name: 服务网关
-      herf: Operation-Guide/Ingress-Gateway.md
-    - name: 虚拟服务
-      herf: Operation-Guide/Virtual-Service.md          
-- name: 常见问题
-  herf: FAQ/faq.md
+    - name: 事务服务信息
+      herf: Operation-Guide/Service-List/Service-List.md    
+
 
